--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -2023,6 +2023,9 @@
 /* Row in Settings screen */
 "title.storage" = "Almacenamiento";
 
+/* Title for the screen with information about who saw your moment. */
+"title.your.moment" = "Visto por";
+
 /* Title for the screen with information about who reacted to your post.
    Title for the screen with information about who saw your post. */
 "title.your.post" = "Visto por";
