--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -2029,6 +2029,9 @@
 /* Row in Settings screen */
 "title.storage" = "التخزين";
 
+/* Title for the screen with information about who saw your moment. */
+"title.your.moment" = "شاهَدَها";
+
 /* Title for the screen with information about who reacted to your post.
    Title for the screen with information about who saw your post. */
 "title.your.post" = "شاهَدَه";
