--- a/Halloapp/Base.lproj/Localizable.stringsdict
+++ b/Halloapp/Base.lproj/Localizable.stringsdict
@@ -246,6 +246,22 @@
 			<string>📷 %d photos</string>
 		</dict>
 	</dict>
+	<key>notification.n.documents</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@num_documents@</string>
+		<key>num_documents</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>other</key>
+			<string>📄 %d files</string>
+			<key>one</key>
+			<string>📄 %d file</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+		</dict>
+	</dict>
 	<key>chat.n.users.typing</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
