--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -1541,6 +1541,9 @@
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.feeds" = "Feed";
 
+/* Header when selecting destinations to forward a message, this header appears above the feeds section */
+"post.privacy.header.frequentlyContacted" = "Häufig kontaktiert";
+
 /* Header when selecting a group to share with
    Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "Deine Gruppen";
@@ -2054,8 +2057,11 @@
 /* Text that indicates the unlock action for a moment. */
 "unlock.title" = "Freischalten";
 
-/* Alert appearing after clicking an external share link that failed to load */
-"urlrouter.externalShare.failed" = "Beitrag kann nicht geladen werden";
+/* Body for alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed.message" = "Dieser Beitrag könnte abgelaufen, gelöscht oder aus einem anderen Grund nicht mehr verfügbar sein.";
+
+/* Title for alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed.title" = "Dieser Beitrag ist nicht mehr verfügbar";
 
 /* Button to confirm blocking user via profile page */
 "user.block" = "Blocken";
