--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -40,6 +40,9 @@
 /* First tab in the main app interface. */
 "activityCenter.promo.favorites" = "ویژگی جدید لیست مخاطبین را مشاهده کنید!";
 
+/* Menu option for adding generic file */
+"add.media.option.document" = "مدرک";
+
 /* Text label for action button to add the contact to the address book */
 "add.to.contact.book" = "افزودن به لیست تلفن‌ها";
 
@@ -438,6 +441,9 @@
 
 /* Message text shown for the message that was deleted */
 "chat.message.deleted" = "این پیام حذف شده است.";
+
+/* Message text shown in a message that has document but no text */
+"chat.message.document" = "فایل";
 
 /* Message text shown in a message that have photo media but no text */
 "chat.message.photo" = "عکس";
@@ -1397,6 +1403,9 @@
 /* New moment screenshot notification text to be shown to the user. */
 "notification.moment.screenshot" = "@% از لحظه شما عکس گرفت";
 
+/* New post notification text when post is multiple documents without caption. */
+"notification.n.documents" = "notification.n.documents";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
@@ -1417,6 +1426,9 @@
 
 /* Title for the new feed post notification. */
 "notification.new.post" = "پست جدید";
+
+/* New post notification text when post is one document without caption. */
+"notification.one.document" = "📄فایل";
 
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "عکس 📷";
@@ -1540,6 +1552,9 @@
 
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.feeds" = "لیست";
+
+/* Header when selecting destinations to forward a message, this header appears above the feeds section */
+"post.privacy.header.frequentlyContacted" = "مخاطبین مکرر";
 
 /* Header when selecting a group to share with
    Header when selecting destinations to forward a message, this header appears above the groups section */
@@ -2054,8 +2069,11 @@
 /* Text that indicates the unlock action for a moment. */
 "unlock.title" = "باز کردن";
 
-/* Alert appearing after clicking an external share link that failed to load */
-"urlrouter.externalShare.failed" = "خطا در بارگذاری";
+/* Body for alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed.message" = "این پست احتمالاً یا منقضی یا حذف شده است.";
+
+/* Title for alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed.title" = "این پست دیگر قابل دسترس نیست";
 
 /* Button to confirm blocking user via profile page */
 "user.block" = "مسدود کردن";
