--- a/Halloapp/pt.lproj/Localizable.stringsdict
+++ b/Halloapp/pt.lproj/Localizable.stringsdict
@@ -262,6 +262,22 @@
 			<string>%d mensagens não lidas</string>
 		</dict>
 	</dict>
+	<key>notification.n.documents</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@num_documents@</string>
+		<key>num_documents</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>📄 %d file</string>
+			<key>other</key>
+			<string>📄 %d files</string>
+		</dict>
+	</dict>
 	<key>notification.n.photos</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
