--- a/Notification Service Extension/es.lproj/Localizable.strings
+++ b/Notification Service Extension/es.lproj/Localizable.strings
@@ -193,6 +193,9 @@
 /* Title for the new feed post notification. */
 "notification.new.post" = "Nueva Publicación";
 
+/* New post notification text when post is one document without caption. */
+"notification.one.document" = "📄 Archivo";
+
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "📷 foto";
 
