--- a/Notification Service Extension/fa.lproj/Localizable.strings
+++ b/Notification Service Extension/fa.lproj/Localizable.strings
@@ -172,6 +172,9 @@
 /* New moment screenshot notification text to be shown to the user. */
 "notification.moment.screenshot" = "@% از لحظه شما عکس گرفت";
 
+/* New post notification text when post is multiple documents without caption. */
+"notification.n.documents" = "notification.n.documents";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
@@ -192,6 +195,9 @@
 
 /* Title for the new feed post notification. */
 "notification.new.post" = "پست جدید";
+
+/* New post notification text when post is one document without caption. */
+"notification.one.document" = "📄فایل";
 
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "عکس 📷";
