--- a/Notification Service Extension/nl.lproj/Localizable.strings
+++ b/Notification Service Extension/nl.lproj/Localizable.strings
@@ -172,6 +172,9 @@
 /* New moment screenshot notification text to be shown to the user. */
 "notification.moment.screenshot" = "%@ heeft een screenshot gemaakt van je moment";
 
+/* New post notification text when post is multiple documents without caption. */
+"notification.n.documents" = "notification.n.documents";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
@@ -192,6 +195,9 @@
 
 /* Title for the new feed post notification. */
 "notification.new.post" = "Nieuwe Post";
+
+/* New post notification text when post is one document without caption. */
+"notification.one.document" = "📄 bestand";
 
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "📷 foto";
