--- a/Halloapp/pt-br.lproj/Localizable.stringsdict
+++ b/Halloapp/pt-br.lproj/Localizable.stringsdict
@@ -390,7 +390,7 @@
 	<key>notification.n.documents</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@num_documents@</string>
+		<string>%#@num_documentos@</string>
 		<key>num_documents</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -402,9 +402,9 @@
 			<key>many</key>
 			<string>📄 %d files</string>
 			<key>one</key>
-			<string>📄 %d file</string>
+			<string>%d arquivo</string>
 			<key>other</key>
-			<string>📄 %d files</string>
+			<string>%d arquivos</string>
 			<key>two</key>
 			<string>📄 %d files</string>
 			<key>zero</key>
